2003-11-19  Larry Jones  <lawrence.jones@eds.com>

	* rcs.c (RCS_getrevtime): Add error checking; cleanup.

2003-11-18  Derek Price  <derek@ximbiot.com>

	* socket-client.c (socket_buffer_initialize): Rename poorly named `n'
	to a slightly more descriptive `sbuf'.
	(Suggestion from Larry Jones  <lawrence.jones@eds.com>.)

2003-11-18  Derek Price  <derek@ximbiot.com>

	* socket-client.c (socket_buffer_initialize): Pass in the socket
	closure we allocate.
	(Report from Larry Jones  <lawrence.jones@eds.com>.)

2003-11-18  Derek Price  <derek@ximbiot.com>

	* modules.c (do_module): Reject absolute paths.
	(Report and suggested fix from Tony Hoyle <tmh@nodomain.org>.)

	* sanity.sh (abspath2): Check for the above.
	(spacefiles): Remove tests that expect absolute paths to files in the
	top level repository directory to work.
	(tests): Add abspath2.

2003-11-18  Derek Price  <derek@ximbiot.com>

	* socket-client.c (socket_buffer_initialize): Correct a typo that
	happened to compile.
	(Report and suggested fix from Patrick Brown <BrownP@symbol.com>.)

2003-11-13  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_delete_revs): It's `&&', not `and'.

2003-11-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Create the empty log to make it easier to tail immediately
	after the script is started.

2003-11-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh (exit_help): Correct help to specify `-H' and not `-h' as
	the help option.

2003-11-13  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_delete_revs): Don't use the WOE32 kludge which refuses to
	delete revisions from bvinary files on Cygwin.  I'm not sure what the
	kludge was trying to avoid, but commenting it out causes the test suite
	to pass.

2003-11-12  Derek Price  <derek@ximbiot.com>

	* main.c (main): Remove a trailing newline from the version string.
	Replace multiple calls to fputs to a single call reformated to C89
	specifications.  Remove some typecasts unecessary under C89.