@@ -1,3 +1,8 @@
+2003-11-21  Larry Jones  <lawrence.jones@eds.com>
+
+	* recurse.c (start_recursion, do_recursion): Cast %p arguments to
+	void * as required by the C standard.
+
 2003-11-19  Larry Jones  <lawrence.jones@eds.com>
 
 	* rcs.c (RCS_getrevtime): Add error checking; cleanup.
